--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,19 @@
-Hello world!
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+<!-- 	<link rel="icon" type="image/png" href="images/favicon-32.png">
+ -->
+	<meta charset="UTF-8">
+	<meta name="description" content="Educate yourself about what's happening in the world, one page refresh at a time.">
+	<meta name="author" content="Shivan Kaul Sahib">
+	<title>FrontPage</title>
+</head>
+
+<body>
+Hello World!
+
+</body>
+</html>
