--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,25 @@
-<html>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <!-- 	<link rel="icon" type="image/png" href="images/favicon-32.png">
  -->
 	<meta charset="UTF-8">
 	<meta name="description" content="Educate yourself about what's happening in the world, one page refresh at a time.">
 	<meta name="author" content="Shivan Kaul Sahib">
+	<script type="text/javascript" src="js/headline.js"></script>
 	<title>FrontPage</title>
 </head>
 
 <body>
-Hello World!
-
+	<script>
+		var results = call_api();
+		window.alert(results);
+	</script>
 </body>
 </html>
