Figure out CORS issue (use jsonp and crossDomain=true in AJAX call), and make slightly pretty.

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,11 @@
 </head>
 
 <body>
+	<div class="to_be_centered">
+		<a id="insert"></a>
+	</div>
 	<script>
-		var results = call_api();
-		window.alert(results);
+		call_api();
 	</script>
 </body>
 </html>
