--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<!-- <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'> -->
-	<!-- <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'> -->
+	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <!-- 	<link rel="icon" type="image/png" href="images/favicon-32.png">
  -->
@@ -17,12 +17,16 @@
 </head>
 
 <body>
+<br><br><br><br>
 	<div class="to_be_centered">
-		<br><br>
 		<a id="insert"></a>
 	</div>
+	<hr>
+	<br>
 	<script>
 		call_api();
 	</script>
+	<div class="copy">
+	<p align="center">Made with &#9829; using the <a href="http://developer.nytimes.com/docs">New York Times API</a> by <a href="http://shivankaulsahib.me">Shivan Kaul Sahib</a>,  2015.</p>
 </body>
 </html>
