--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,14 @@
 	<div class="to_be_centered">
 		<a id="insert"></a>
 	</div>
+	<p id="abstract"></p>
+	<br>
 	<hr>
 	<br>
 	<script>
 		call_api();
 	</script>
 	<div class="copy">
-	<p align="center">Made with &#9829; using the <a href="http://developer.nytimes.com/docs">New York Times API</a> by <a href="http://shivankaulsahib.me">Shivan Kaul Sahib</a>,  2015.</p>
+	<p align="center">Made with &#9829; using the <a href="http://developer.nytimes.com/docs">New York Times API</a> by <a href="http://shivankaulsahib.me">Shivan Kaul Sahib</a>, 2015.</p>
 </body>
 </html>
