--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
 	<!-- <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'> -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<!-- 	<link rel="icon" type="image/png" href="images/favicon-32.png">
- -->
+	<link rel="icon" type="image/png" href="images/favicon-32.png">
 	<meta charset="UTF-8">
 	<meta name="description" content="Educate yourself about what's happening in the world, one page refresh at a time.">
 	<meta name="author" content="Shivan Kaul Sahib">
